--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,6 @@
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+title: The MyConnectome Project
+description: Studying a single human brain in detail
